kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-app
  name: todo-app
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: todo-app
