kustomize/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todo-app
  name: todo-app
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: todo-app
